update landing page

--- a/acquisitions.html
+++ b/acquisitions.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Y Combinator's Investors
+title: Y Combinator's Acquisitions
 ---
-<h2>Y Combinator's Investors</h2>
+<h2>Y Combinator's Acquisitions</h2>
 
 <!-- Organizations -->
 {% assign investors = site.data.investors %}
