--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@ title: Y Combinator's Network
   <li><a href="people.html">People</a></li>
   <li><a href="investors.html">Investors</a></li>
   <li><a href="investments.html">Investments</a></li>
+  <li><a href="acquisitions.html">Acquisitions</a></li>
 </ul>
 
