--- a/investments.html
+++ b/investments.html
@@ -13,7 +13,7 @@ title: Y Combinator's Investments
 {% for investment in investments %}
 
 <ul>
-<li><strong>{{ investment.Name }}</strong> (Date: {{ investment.Date }}) {{ investment.Notes }}</li>
+<li><strong>{{ investment.Name }}</strong> ({{ investment.Date }}) {{ investment.Notes }}</li>
 </ul>
 
 {% endfor %}
