--- a/acquisitions.html
+++ b/acquisitions.html
@@ -13,7 +13,7 @@ title: Y Combinator's Acquisitions
 {% for acquisition in acquisitions %}
 
 <ul>
-<li><strong>{{ acquisition.Name }}</strong> ({{ acquisition.Date }})</li>
+<li><strong>{{ acquisition.Name }}</strong> ({{ acquisition.Date }}, {{ acquisition.Notes }})</li>
 </ul>
 
 {% endfor %}
