--- a/index.html
+++ b/index.html
@@ -12,3 +12,4 @@ title: Y Combinator's Network
   <li><a href="acquisitions.html">Acquisitions</a></li>
 </ul>
 
+<p><em>This project was last updated 1 November 2018</em></p>
